objects/Account.object
<CustomObject>
    <fields>
        <fullName>Quip_URL__c</fullName>
        <label>Quip_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Property Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Listing</fullName>
                </value>
                <value>
                    <fullName>Offer Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Contract</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Rented</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__CustomField1__c</fullName>
        <label>Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CustomField2__c</fullName>
        <label>Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__E_AccountGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Group</label>
        <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PreventAddrBookSave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, users cannot save new addresses to the address book.</description>
        <label>Prevent Address Book Saves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__PreventNewAddrCheckout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the user should not be able to add new addresses during checkout</description>
        <label>Prevent New Addresses at Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__PreventNewBillAddrCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the user should not be able to add new billing addresses during checkout</description>
        <label>Prevent New Checkout Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__SourceSystem__c</fullName>
        <label>Source System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxExemptAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the field to indicate whether an account is tax exempt.</description>
        <inlineHelpText>This is the field to indicate whether an account is tax exempt.</inlineHelpText>
        <label>TaxExemptAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__UsedByCloudcraze__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used by Cloudcraze Customer Portal</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>